CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

IF (NOT ZENO_WITH_RPC OR NOT ZENO_WITH_zenvdb)
    MESSAGE(SEND_ERROR "Add flag -DZENO_WITH_RPC=ON -DZENO_WITH_zenvdb=ON ")
    MESSAGE(FATAL_ERROR "You must enable RPC to use road system.")
ENDIF()

ADD_SUBDIRECTORY(utilities)
ADD_SUBDIRECTORY(service)
ADD_SUBDIRECTORY(nodes)
